# Memory-Structures

./: .gitignore  CMakeLists.txt  README.md  gatorgrade.yml
.github/workflows/: main.yml
.github/workflows/ISSUE_TEMPLATE/: wizard.md
docs/: report.md
src/: main.c
src/headers/: assignment.h
tests/: check.bash  test.gdb
